Kubernetes/12_ingress/files/service2.yaml
kind: Pod
apiVersion: v1
metadata:
  name: api
  labels:
    app: api
spec:
  containers:
    - name: api
      image: hashicorp/http-echo
      args:
        - "-text=api"
      ports:
        - containerPort: 5678 
---
kind: Service
apiVersion: v1
metadata:
  name: api-svc
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 5678
